--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.10.5
+  tflite_flutter: ^0.10.0
+  image: ^4.0.17
+  flutter_image_compress: ^2.1.0
+  http: ^1.1.0  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
