--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.1.0
   camera: ^0.10.5
   tflite_flutter: ^0.10.0
   image: ^4.0.17
